Nav Spacing fix

--- a/frontend/src/components/header_nav/HeaderNav.css
+++ b/frontend/src/components/header_nav/HeaderNav.css
@@ -7,6 +7,7 @@
 
     ul {
       list-style-type: none;
+      margin: 16px 0;
       padding: 0;
       overflow: hidden;
       background-color: var(--primary-color);
